Add fix to properly align question dropdown
- This is a workaround fix as it relies on the important
indicator for css to override the inline style set on the element.
This has been noted within the UserCreationController file.

--- a/assets/sass/widgets/_chosen.scss
+++ b/assets/sass/widgets/_chosen.scss
@@ -508,6 +508,11 @@
     background-position: -12px 2px;
 }
 
+/* CLQ custom edit for fixing dropdown issue */
+.chzn-container.chzn-container-single.chzn-container-single-nosearch.chzn-with-drop.chzn-container-active {
+  top: 273.703px !important;
+}
+
 /* @end */
 
 /* @group Retina compatibility */
