--- a/assets/sass/widgets/_chosen.scss
+++ b/assets/sass/widgets/_chosen.scss
@@ -509,9 +509,9 @@
 }
 
 /* CLQ custom edit for fixing dropdown issue */
-.chzn-container.chzn-container-single.chzn-container-single-nosearch.chzn-with-drop.chzn-container-active {
-  top: 269px !important;
-}
+// .chzn-container.chzn-container-single.chzn-container-single-nosearch.chzn-with-drop.chzn-container-active {
+//   top: 269px !important;
+// }
 
 /* @end */
 
