--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -11,7 +11,7 @@ body {
   min-width: 100%;
   min-height: 100%;
   color: $medium-text-color;
-  position: relative;
+  position: absolute; // CLQ changed from relative to absolute to fix dropdown issue
   overflow: auto;
 }
 
