--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -19,9 +19,13 @@
   border-style: solid;
   border-width: 1px;
   height: auto;
-  margin: 100px auto 0;
+  margin: 0px auto 0px;
   width: $container-width;
   min-width: $container-min-width;
+  position: absolute; // CLQ Edit
+  top: 50%; // CLQ Edit
+  left: 50%; // CLQ Edit
+  transform: translate(-50%, -50%); // CLQ Edit
   @include box-sizing(border-box);
 
   @include device-mq(x-small) {
